# mpi_hello

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  mpi_hello.cbp
